# openzeppelin-relayer

./: .cursorignore  .dockerignore  .env  .env.example  .env.integration.example  .gitignore  .gitmodules  .pre-commit-config.yaml  .talismanrc  .yamlfix.toml  ARCHITECTURE_PROPOSAL.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DOCKER_README.md  Dockerfile.development  Dockerfile.integration  Dockerfile.midnight.development  Dockerfile.production  IMPLEMENTATION_PLAN.md  INTHEWILD.md  Makefile.toml  NOTICE  README.md  TESTING.md  TRANSACTION_FLOW_ANALYSIS.md  TRANSACTION_FLOW_DIAGRAM.md  build.rs  config.json  docker-compose.integration.yml  docker-compose.yaml  index.html  nav.html  netlify.toml  openapi.json  osv-scanner.toml  rust-toolchain.toml  (+5 more)
.cargo/: config.toml
.cursor/rules/: rust_standards.mdc
.github/: codecov.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  docs.yml  feature.yml
.github/workflows/: ci.yaml  cla.yml  codeql.yml  ecs-deployment.yml  external.yml  integration-tests.yaml  pr-title.yaml  rc.yml  release-docker.yml  release-docs.yml  release-please.yml  release-sbom.yml  rust-docs-url.yml  scorecard.yml  semgrep.yml  tmp-codecove.yaml  update-lock.yaml
cmd/prometheus/: grafana.ini  prometheus.yml
config/: config-v1.json  config.example.json  config.json  config.test.json  midnight-test-config.json
config/networks/: abstract.json  arbitrum.json  ethereum.json  local-anvil-docker.json  local-anvil-integration.json  local-anvil.json  midnight.json  optimism.json  other-l1s.json  polkadot.json  polygon.json  sei.json  sophon.json  stellar.json
docs/: ENCRYPTION.md  README.md  antora.yml  changelog.mdx  evm.mdx  index.mdx  latest-versions.js  midnight-architecture.md  midnight-integration-test-plan.md  midnight-ledger-patch-brief.md  midnight-migration-guide.md  midnight-testing-guide.md  midnight.mdx  network_configuration.mdx  openapi.json  quickstart.mdx  roadmap.mdx  solana.mdx  stellar.mdx  zama-fhevm.mdx
docs/1.0.x/: index.mdx  solana.mdx
docs/1.1.x/: changelog.mdx  evm.mdx  index.mdx  quickstart.mdx  solana.mdx  stellar.mdx
docs/1.2.x/: changelog.mdx  evm.mdx  index.mdx  network_configuration.mdx  quickstart.mdx  solana.mdx  stellar.mdx
docs/1.3.x/: changelog.mdx  evm.mdx  index.mdx  network_configuration.mdx  quickstart.mdx  solana.mdx  stellar.mdx
docs/1.4.x/: changelog.mdx  evm.mdx  index.mdx  quickstart.mdx  solana.mdx  stellar.mdx  structure.mdx  zama-fhevm.mdx
docs/1.5.x/: evm.mdx  index.mdx  solana.mdx  stellar.mdx  zama-fhevm.mdx
docs/api/: buildSponsoredTransaction.mdx  callPlugin.mdx  callPluginGet.mdx  cancelTransaction.mdx  createNotification.mdx  createRelayer.mdx  createSigner.mdx  deleteNotification.mdx  deletePendingTransactions.mdx  deleteRelayer.mdx  deleteSigner.mdx  getNetwork.mdx  getNotification.mdx  getPlugin.mdx  getRelayer.mdx  getRelayerBalance.mdx  getRelayerStatus.mdx  getSigner.mdx  getTransactionById.mdx  getTransactionByNonce.mdx  health.mdx  index.mdx  listMetrics.mdx  listNetworks.mdx  listNotifications.mdx  listPlugins.mdx  listRelayers.mdx  listSigners.mdx  listTransactions.mdx  metricDetail.mdx  metric_detail.mdx  quoteSponsoredTransaction.mdx  readiness.mdx  replaceTransaction.mdx  rpc.mdx  scrapeMetrics.mdx  scrape_metrics.mdx  sendTransaction.mdx  sign.mdx  signTransaction.mdx  (+6 more)
docs/configuration/: index.mdx  signers.mdx  storage.mdx
docs/guides/: index.mdx  stellar-channels-guide.mdx  stellar-sponsored-transactions-guide.mdx  stellar-sponsored_transactions-guide.mdx  stellar-sponsored_transactions-guilde.mdx  stellar-x402-facilitator-guide.mdx  zama-fhevm-counter-guide.mdx
docs/plugins/: channels.mdx  index.mdx
examples/aqs-sqs-queue-storage/: README.md
examples/aws-sqs-queue-storage/: README.md  docker-compose.yaml
examples/basic-example/: README.md  docker-compose.yaml
examples/basic-example-logging/: .env.example  README.md  docker-compose.yaml
examples/basic-example-metrics/: README.md  docker-compose.yaml
examples/basic-example-plugin/: README.md  docker-compose.yaml
examples/channels-plugin-example/: .env.example  README.md  docker-compose.mt.yaml  docker-compose.plugin-dev.yaml  docker-compose.yaml
examples/channels-x402-plugin-example/: .env.example  README.md  docker-compose.plugin-dev.yaml  docker-compose.yaml
examples/env-rpc-urls/: .env.example  README.md  docker-compose.yaml
examples/evm-aws-kms-signer/: README.md  docker-compose.yaml
examples/evm-azure-key-vault-signer/: .env.example  README.md  docker-compose.yaml
examples/evm-cdp-signer/: README.md  docker-compose.yaml
examples/evm-gcp-kms-signer/: docker-compose.yaml
examples/evm-turnkey-signer/: docker-compose.yaml
examples/gas-price-caching/: README.md  docker-compose.yaml
examples/gcp-pubsub-queue-storage/: .env.example  README.md  docker-compose.gcp.yaml  docker-compose.yaml
examples/horizontal-scaling/: .env.example  .gitignore  README.md  docker-compose.yaml  nginx.conf  prometheus.yml
examples/launchtube-plugin-example/: README.md  docker-compose.plugin-dev.yaml  (+1 more)
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: extract_public_key_from_der.rs
helpers/: create_key.rs  generate_encryption_key.rs  generate_encyption_key.rs  generate_openapi.rs  generate_uuid.rs  midnight_dust_prep.rs  populate_transactions.rs  sign_soroban_auth_entry.rs  test_tx.rs  verify_eip712.rs
macros/: Cargo.toml
patches/: apply.sh  midnight-ledger-8.0.2.patch
plugins/: ARCHITECTURE.md  NEW_PATTERN.md  README.md  example.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
scripts/: anvil-local.sh  cleanup_stuck_stellar_txs.sh  dedup_changelog.py  dedupe_changelog.py  deploy-local-contracts.sh  generate_redis_certs.sh  run-integration-docker.sh  rust_antora.sh  rust_docs.sh  start-anvil-local.sh  stop-anvil-local.sh  version.sh
simple_storage/: foundry.toml
src/: config_processor.rs  errors.rs  lib.rs  main.rs  openapi.rs
tests/: integration.rs  logging.rs  midnight_shared_sync_smoke.rs
(+1060 files in other folders)
