[package]
name = "openzeppelin-relayer"
version = "0.2.0"
edition = "2021"
rust-version = "1.85"         #MSRV

[profile.release]
opt-level = 0
overflow-checks = false
panic = "unwind"

[profile.test]
debug = true
opt-level = 0
overflow-checks = true
panic = "unwind"

[patch."https://github.com/input-output-hk/midnight-ledger-prototype"]
mn-ledger-storage = { git = "https://github.com/midnightntwrk/midnight-ledger-prototype", package = "midnight-storage", tag = "ledger-4.0.0" }
coin-structure = { git = "https://github.com/midnightntwrk/midnight-ledger-prototype", package = "midnight-coin-structure", tag = "ledger-4.0.0" }
onchain-runtime = { git = "https://github.com/midnightntwrk/midnight-ledger-prototype", package = "midnight-onchain-runtime", tag = "ledger-4.0.0" }
midnight-serialize = { git = "https://github.com/midnightntwrk/midnight-ledger-prototype", tag = "ledger-4.0.0" }
base-crypto = { git = "https://github.com/midnightntwrk/midnight-ledger-prototype", package = "midnight-base-crypto", tag = "ledger-4.0.0" }
transient-crypto = { git = "https://github.com/midnightntwrk/midnight-ledger-prototype", package = "midnight-transient-crypto", tag = "ledger-4.0.0" }

[dependencies]
actix-governor = "0.8"
actix-rt = "2.0.0"
actix-web = "4"
alloy = { version = "0.9", features = ["full"] }
apalis = { version = "0.7", features = [
    "limit",
    "retry",
    "catch-panic",
    "timeout",
] }
apalis-cron = { version = "0.7" }
apalis-redis = { version = "0.7" }
async-trait = "0.1"
backoff = { version = "0.4.0", features = ["tokio"] }
base64 = { version = "0.22" }
bech32 = "0.11.0"
bincode = { version = "1.3" }
bs58 = "0.5"
bytes = { version = "1.9" }
chrono = "0.4"
color-eyre = "0.6"
dashmap = { version = "6.1" }
dotenvy = "0.15"
ed25519-dalek = "2.1"
eyre = "0.6"
futures = "0.3"
futures-util = "0.3"
google-cloud-auth = "0.20.0"
governor = "0.8.0"
hex = { version = "0.4" }
hmac = { version = "0.12" }
http = { version = "1.3.1" }
itertools = "0.12.0" # Required by midnight
k256 = { version = "0.13" }
lazy_static = "1.5"
libsodium-sys = "0.2.7"
log = "0.4"
midnight-ledger-prototype = { git = "https://github.com/midnightntwrk/midnight-ledger-prototype", package = "midnight-ledger", tag = "ledger-4.0.0" }
midnight-node-ledger-helpers = { git = "https://github.com/midnightntwrk/midnight-node", package = "midnight-node-ledger-helpers", tag = "node-0.12.0" }
midnight-node-res = { git = "https://github.com/midnightntwrk/midnight-node", package = "midnight-node-res", tag = "node-0.12.0" }
mpl-token-metadata = { version = "5.1" }
num_enum = { version = "0.7", default-features = false }
once_cell = "1.17"
oz-keystore = { version = "0.1.4" }
p256 = { version = "0.13.2" }
parking_lot = "0.12"
pem = { version = "3" }
prometheus = "0.13"
rand = "0.9"
redis = { version = "0.31" }
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
secrets = { version = "1.2" }
serde = { version = "1.0", features = ["derive", "alloc"] }
serde_json = "1"
sha2 = { version = "0.10" }
simple_asn1 = { version = "0.6" }
simplelog = "0.12"
solana-client = { version = "2.2" }
solana-sdk = { version = "2.2" }
soroban-rs = "0.2.4"
spl-associated-token-account = "6.0.0"
spl-token = { version = "8" }
spl-token-2022 = { version = "8" }
stellar-strkey = "0.0.12"
strum = { version = "0.27", default-features = false, features = ["derive"] }
strum_macros = "0.27"
subtle = "2.6"
subxt = { version = "0.37.0", features = ["substrate-compat"] }
sysinfo = "0.35"
thiserror = "2"
tokio = { version = "1.43", features = ["sync", "io-util", "time"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
tower = "0.5"
utoipa = { version = "5.3", features = ["actix_extras"] }
uuid = { version = "1.11", features = ["v4"] }
validator = { version = "0.20", features = ["derive"] }
vaultrs = { version = "0.7.4" }
zeroize = "1.8"

[dev-dependencies]
cargo-llvm-cov = "0.6"
clap = { version = "4.4", features = ["derive"] }
mockall = { version = "0.13" }
mockito = "1.6.1"
proptest = "1.6.0"
rand = "0.9.0"
serial_test = "3.2"
tempfile = "3.2"
wiremock = "0.6"

[[bin]]
name = "openzeppelin-relayer"
path = "src/main.rs"
doc = true
doctest = true

[[example]]
name = "test_tx"
path = "helpers/test_tx.rs"

[[example]]
name = "create_key"
path = "helpers/create_key.rs"

[[example]]
name = "generate_uuid"
path = "helpers/generate_uuid.rs"

[[example]]
name = "generate_openapi"
path = "helpers/generate_openapi.rs"

[lib]
path = "src/lib.rs"
