[package]
name = "openzeppelin-relayer"
version = "1.1.0"
edition = "2024"
rust-version = "1.90"         #MSRV

[profile.release]
opt-level = 0
overflow-checks = false
panic = "unwind"

[profile.test]
debug = true
opt-level = 0
overflow-checks = true
panic = "unwind"

[dependencies]
actix-governor = "0.8"
actix-rt = "2.0.0"
actix-web = "4"
aes-gcm = "0.10"
alloy = { version = "1.0.24", features = ["full"] }
apalis = { version = "0.7", features = [
    "limit",
    "retry",
    "catch-panic",
    "timeout",
] }
apalis-cron = { version = "0.7" }
apalis-redis = { version = "0.7" }
async-trait = "0.1"
aws-config = { version = "1.6.3", features = ["behavior-version-latest"] }
aws-sdk-kms = "1.75.0"
backoff = { version = "0.4.0", features = ["tokio"] }
base64 = { version = "0.22" }
bech32 = "0.11.0"
bincode = { version = "1.3.3" }
bs58 = "0.5"
bytes = { version = "1.9" }
cdp-sdk = "0.1.0"
chrono = "0.4"
color-eyre = "0.6"
dashmap = { version = "6.1" }
dotenvy = "0.15"
ed25519-dalek = "2.2"
eyre = "0.6"
futures = "0.3"
futures-util = "0.3"
google-cloud-auth = "0.22.1"
governor = "0.8.0"
hex = { version = "0.4" }
hmac = { version = "0.12" }
http = { version = "1.3.1" }
itertools = "0.12.0" # Required by midnight
json-patch = "4.0"
jsonrpsee-core = "0.20.4"
k256 = { version = "0.13", features = ["ecdsa-core"] }
lazy_static = "1.5"
libsodium-sys = "0.2.7"
log = "0.4"
midnight-ledger = { git = "https://github.com/midnightntwrk/midnight-ledger", package = "midnight-ledger", tag = "ledger-6.1.0-alpha.3" }
midnight-node-ledger-helpers = { git = "https://github.com/midnightntwrk/midnight-node", package = "midnight-node-ledger-helpers", tag = "node-0.17.0-rc.4", features = [
    "test-utils",
] }
midnight-node-res = { git = "https://github.com/midnightntwrk/midnight-node", package = "midnight-node-res", tag = "node-0.17.0-rc.4" }
midnight-node-metadata = { git = "https://github.com/midnightntwrk/midnight-node", package = "midnight-node-metadata", tag = "node-0.17.0-rc.4" }
midnight-transient-crypto = { git = "https://github.com/midnightntwrk/midnight-ledger", package = "midnight-transient-crypto", tag = "ledger-6.1.0-alpha.3" }
midnight-coin-structure = { git = "https://github.com/midnightntwrk/midnight-ledger", package = "midnight-coin-structure", tag = "ledger-6.1.0-alpha.3" }
midnight-storage = { git = "https://github.com/midnightntwrk/midnight-ledger", package = "midnight-storage", tag = "ledger-6.1.0-alpha.3" }
mpl-token-metadata = { version = "5.1" }
num_enum = { version = "0.7", default-features = false }
once_cell = "1.17"
oz-keystore = { version = "0.1.4" }
p256 = { version = "0.13.2" }
parking_lot = "0.12"
pem = { version = "3" }
prometheus = "0.14"
rand = "0.9"
redis = { version = "0.32", features = [
    "aio",
    "connection-manager",
    "tokio-comp",
] }
regex = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
reqwest-middleware = { version = "0.4.2", default-features = false, features = [
    "json",
] }
secrets = { version = "1.2" }
serde = { version = "1.0", features = ["derive", "alloc"] }
serde_json = "1"
sha2 = { version = "0.10" }
sha3 = { version = "0.10" }
simple_asn1 = { version = "0.6" }
simplelog = "0.12"
solana-client = { version = "3" }
solana-commitment-config = { version = "3" }
solana-program = { version = "2" }
solana-sdk = { version = "3" }
solana-system-interface = { version = "2.0.0", features = ["bincode"] }
soroban-rs = "0.2.6"
spl-associated-token-account-interface = "2"
spl-token = { version = "8" }
spl-token-2022 = { version = "8" }
spl-token-2022-interface = { version = "2" }
spl-token-interface = { version = "2" }
stellar-strkey = "0.0.13"
strum = { version = "0.27", default-features = false, features = ["derive"] }
strum_macros = "0.27"
subtle = "2.6"
subxt = "0.44.0"
sysinfo = "0.36"
thiserror = "2"
tokio = { version = "1.43", features = ["sync", "io-util", "time"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
tower = "0.5"
tracing = "0.1"
tracing-actix-web = "0.7"
tracing-appender = "0.2"
tracing-error = { version = "0.2" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
utoipa = { version = "5.3", features = ["actix_extras"] }
uuid = { version = "1.11", features = ["v4"] }
validator = { version = "0.20", features = ["derive"] }
vaultrs = { version = "0.7.4" }
zeroize = "1.8"
mockall = "0.13"

[dev-dependencies]
cargo-llvm-cov = "0.6"
clap = { version = "4.4", features = ["derive"] }
mockall = { version = "0.13" }
mockito = "1.7.0"
proptest = "1.6.0"
rand = "0.9.0"
serial_test = "3.2"
tempfile = "3.2"


[[bin]]
name = "openzeppelin-relayer"
path = "src/main.rs"
doc = true
doctest = true

[[example]]
name = "generate_midnight_fixtures"
path = "scripts/fixtures/generate_midnight_fixtures.rs"

[[example]]
name = "test_tx"
path = "helpers/test_tx.rs"

[[example]]
name = "create_key"
path = "helpers/create_key.rs"

[[example]]
name = "generate_uuid"
path = "helpers/generate_uuid.rs"

[[example]]
name = "generate_encryption_key"
path = "helpers/generate_encryption_key.rs"

[[example]]
name = "generate_openapi"
path = "helpers/generate_openapi.rs"

[[example]]
name = "verify_eip712"
path = "helpers/verify_eip712.rs"

[lib]
path = "src/lib.rs"
