[package]
name = "openzeppelin-relayer"
version = "1.6.0"
edition = "2021"
rust-version = "1.91"         #MSRV

[features]
default = []
integration-tests = []
redis-tls-native = ["redis/tls-native-tls", "redis/tokio-native-tls-comp"]
redis-tls-rustls = ["redis/tls-rustls", "redis/tokio-rustls-comp"]

[profile.release]
opt-level = 0
overflow-checks = false
panic = "unwind"

[profile.test]
debug = true
opt-level = 0
overflow-checks = true
panic = "unwind"

[dependencies]
aws-config = { version = "1.6.3", features = ["behavior-version-latest"] }
aws-sdk-kms = "1.91.0"
aws-sdk-sqs = "1.56.0"
aws-smithy-types = "1"
aws-smithy-runtime-api = "1"
actix-web = "4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-error = { version = "0.2" }
tracing-appender = "0.2"
tracing-actix-web = "0.7"
prometheus = "0.14"
lazy_static = "1.5"
dotenvy = "0.15"
thiserror = "2"
async-trait = "0.1"
actix-rt = "2.0.0"
alloy = { version = "1.0.24", features = ["full"] }
serde_json = "1"
json-patch = "4.0"
strum = { version = "0.27", default-features = false, features = ["derive"] }
strum_macros = "0.27"
serde = { version = "1.0", features = ["derive", "alloc"] }
num_enum = { version = "0.7", default-features = false }
once_cell = "1.17"
regex = "1"
futures = "0.3"
uuid = { version = "1.11", features = ["v4", "v5"] }
chrono = "0.4"
cron = "0.13"
eyre = "0.6"
color-eyre = "0.6"
apalis = { version = "0.7", features = ["limit", "retry", "catch-panic", "timeout"] }
apalis-redis = { version = "0.7" }
apalis-cron = { version = "0.7" }
redis = { version = "0.32", features = ["aio", "connection-manager", "tokio-comp"] }
deadpool-redis = { version = "0.22", features = ["rt_tokio_1"] }
tokio = { version = "1.43", features = ["sync", "io-util", "time", "rt-multi-thread", "signal", "net"] }
rand = "0.9"
parking_lot = "0.12"
tower = "0.5"
oz-keystore = { version = "0.1.4"}
hex = { version = "0.4"}
bytes = { version = "1.9" }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
base64 = { version =  "0.22" }
hmac = { version = "0.12" }
sha2 = { version = "0.10" }
sha3 = { version = "0.10" }
dashmap = { version = "6.1" }
scc = "2"
crossbeam = { version = "0.8.4" }
async-channel = "2.5"
actix-governor = "0.8"
solana-sdk = { version = "3" }
solana-client = { version = "3" }
solana-program = { version = "2" }
solana-commitment-config = { version = "3" }
spl-token-interface = { version = "2" }
spl-token-2022-interface = { version = "2" }
mpl-token-metadata = { version = "5.1" }
sysinfo = "0.36"
bincode = { version = "1.3" }
bs58 = "0.5"
spl-associated-token-account-interface = "2"
itertools = "0.14.0"
validator = { version = "0.20", features = ["derive"] }
vaultrs = { version = "0.7.4" }
utoipa = { version = "5.3", features = ["actix_extras"] }
secrets = { version = "1.2"}
libsodium-sys = "0.2.7"
zeroize = "1.8"
subtle = "2.6"
aes-gcm = "0.10"
ed25519-dalek = { version = "2.2", features = ["pkcs8"] }
stellar-strkey = "0.0.14"
soroban-rs = "0.2.6"
jsonrpsee-core = "0.20.4"
p256 = { version = "0.13.2" }
google-cloud-auth = "0.22.1"
# GCP Pub/Sub queue backend. EXACT-pinned (Constitution I: transport deps must be
# pinned + supply-chain reviewed). Isolated from `google-cloud-auth 0.22` above
# (distinct `gcloud-*` crate names → no version conflict). The Cloud Monitoring
# depth read uses the relayer's existing direct `reqwest` (0.12) + this crate's
# `gcloud-auth` token source — no extra HTTP crate for the read itself. Note for
# dependency audits: gcloud-pubsub pulls its own `reqwest` 0.13 transitively for
# its gRPC/REST transport.
gcloud-pubsub = "=1.7.1"
gcloud-googleapis = { version = "=1.3.0", features = ["pubsub"] }
# Already in the tree via gcloud-pubsub; promoted to a direct dep only to name
# the `TokenSource` trait for the Cloud Monitoring depth read (no new supply-chain
# surface). EXACT-pinned (Constitution I).
token-source = "=1.0.0"
# Already in the tree (0.23.36) transitively. Promoted to a direct dep only to
# install a process-default CryptoProvider: both rustls providers (aws-lc-rs +
# ring) are compiled in via the AWS SDK / Solana / gcloud trees, so rustls cannot
# auto-select one, and gcloud-pubsub's TLS (which uses the process default) panics
# on the first real-GCP connection without it. EXACT-pinned to the resolved
# version (Constitution I); aws_lc_rs matches gcloud-pubsub's own provider.
rustls = { version = "=0.23.36", features = ["aws_lc_rs"] }
http = { version = "1.3.1" }
pem = { version = "3" }
simple_asn1 = { version = "0.6" }
k256 = { version = "0.13", features = ["ecdsa-core"]}
solana-system-interface = { version = "2.0.0", features = ["bincode"] }
cdp-sdk = "0.1.0"
reqwest-middleware = { version = "0.4.2", default-features = false, features = ["json"] }
url = "2"
lru = "0.16"

[dev-dependencies]
cargo-llvm-cov = "0.6"
ctor = "0.2"
mockall = { version = "0.13" }
mockito = "1.7.1"
proptest = "1.6.0"
rand = "0.9.0"
tempfile = "3.2"
serial_test = "3.2"
clap = { version = "4.5", features = ["derive"] }


[[bin]]
name = "openzeppelin-relayer"
path = "src/main.rs"
doc = true
doctest = true

[[example]]
name = "test_tx"
path = "helpers/test_tx.rs"

[[example]]
name = "create_key"
path = "helpers/create_key.rs"

[[example]]
name = "generate_uuid"
path = "helpers/generate_uuid.rs"

[[example]]
name = "generate_encryption_key"
path = "helpers/generate_encryption_key.rs"

[[example]]
name = "generate_openapi"
path = "helpers/generate_openapi.rs"

[[example]]
name = "verify_eip712"
path = "helpers/verify_eip712.rs"

[[example]]
name = "sign_soroban_auth_entry"
path = "helpers/sign_soroban_auth_entry.rs"

[lib]
path = "src/lib.rs"
